--- a/kann_max.html
+++ b/kann_max.html
@@ -11,6 +11,7 @@
     <li><a href="kann_max.html">Kann Max</a></li>
     <li><a href="acroca1000t.html">ACRO CA1000T</a></li>
     <li><a href="story.html">Story</a></li>
+    <li><a href="#contact">Contact</a></li>
   </ul>
 </nav>
 <div style="display: flex; flex-direction: column; align-items: center; margin-top: 2rem;">
@@ -1015,6 +1016,20 @@ window.addEventListener('DOMContentLoaded', () => {
 <tr><td>Hifiman Ananda Nano</td><td>Ultimate Relax</td><td>Mid</td><td>Minimum Phase Slow Roll-off</td></tr>
 </tbody>
 </table>
+<!-- Bottom Navigation Section for Variety -->
+<footer class="bottom-nav">
+  <div class="bottom-nav-inner">
+    <a href="index.html">Home</a>
+    <span class="divider">|</span>
+    <a href="kann_max.html">Kann Max</a>
+    <span class="divider">|</span>
+    <a href="acroca1000t.html">ACRO CA1000T</a>
+    <span class="divider">|</span>
+    <a href="story.html">Story</a>
+    <span class="divider">|</span>
+    <a href="#contact">Contact</a>
+  </div>
+</footer>
 </div>
 </body>
 </html>
