--- a/acroca1000t.html
+++ b/acroca1000t.html
@@ -6,15 +6,32 @@
 </head>
 <body>
 <nav class="main-nav">
-  <a href="index.html">Home</a>
-  <a href="kann_max.html">KANN Max Playbook</a>
-  <a href="ca1000t.html">CA1000T Playbook</a>
-  <a href="story.html">Story</a>
+  <ul>
+    <li><a href="index.html">Home</a></li>
+    <li><a href="kann_max.html">Kann Max</a></li>
+    <li><a href="acroca1000t.html">ACRO CA1000T</a></li>
+    <li><a href="story.html">Story</a></li>
+    <li><a href="#contact">Contact</a></li>
+  </ul>
 </nav>
 <img src="assets/CA1000T.jpg" alt="Astell&Kern CA1000T" class="product-image">
 <div class="card">
   <h1>CA1000T Playbook</h1>
   <p>Coming soon...</p>
 </div>
+<!-- Bottom Navigation Section for Variety -->
+<footer class="bottom-nav">
+  <div class="bottom-nav-inner">
+    <a href="index.html">Home</a>
+    <span class="divider">|</span>
+    <a href="kann_max.html">Kann Max</a>
+    <span class="divider">|</span>
+    <a href="acroca1000t.html">ACRO CA1000T</a>
+    <span class="divider">|</span>
+    <a href="story.html">Story</a>
+    <span class="divider">|</span>
+    <a href="#contact">Contact</a>
+  </div>
+</footer>
 </body>
 </html>
