--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <nav class="main-nav">
   <a href="index.html">Home</a>
   <a href="kann_max.html">KANN Max Playbook</a>
-  <a href="ca1000t.html">CA1000T Playbook</a>
+  <a href="acroca1000t.html">CA1000T Playbook</a>
   <a href="story.html">Story</a>
 </nav>
 <h1>Audiophile Playbook by Christian Molnar</h1>
@@ -20,7 +20,7 @@
 <div class="card">
   <img src="assets/CA1000T.jpg" alt="Astell&Kern CA1000T" class="product-image">
   <h2>CA1000T Playbook</h2>
-  <a class="btn" href="ca1000t.html">View CA1000T Reference</a>
+  <a class="btn" href="acroca1000t.html">View CA1000T Reference</a>
 </div>
 <div class="card">
   <h2>Story of the Collaboration</h2>
