--- a/kann_max.html
+++ b/kann_max.html
@@ -56,7 +56,7 @@
   <div class="contact-modal">
     <button class="contact-modal-close" id="contact-modal-close" aria-label="Close">&times;</button>
     <h2>Contact</h2>
-    <form action="https://formspree.io/f/xqkrqjzv" method="POST" class="contact-form">
+    <form action="https://formspree.io/f/xovdeqpa" method="POST" class="contact-form">
       <label for="contact-name">Name:</label>
       <input type="text" id="contact-name" name="name" required>
       <label for="contact-subject">Subject:</label>
