--- a/index.html
+++ b/index.html
@@ -5,26 +5,96 @@
 </head>
 <body>
 <nav class="main-nav">
-  <a href="index.html">Home</a>
-  <a href="kann_max.html">KANN Max Playbook</a>
-  <a href="acroca1000t.html">CA1000T Playbook</a>
-  <a href="story.html">Story</a>
+  <ul>
+    <li><a href="index.html">Home</a></li>
+    <li><a href="kann_max.html">Kann Max</a></li>
+    <li><a href="acroca1000t.html">ACRO CA1000T</a></li>
+    <li><a href="story.html">Story</a></li>
+    <li><a href="#contact">Contact</a></li>
+  </ul>
 </nav>
-<h1>Audiophile Playbook by Christian Molnar</h1>
-<p><em>Created in collaboration with Orionis Cantus ("Song of Orion") (ChatGPT, OpenAI)</em></p>
-<div class="card">
-  <img src="assets/Astell_Kern_KANN_Max.jpg" alt="Astell&Kern KANN Max" class="product-image">
-  <h2>KANN Max Playbook</h2>
-  <a class="btn" href="kann_max.html">View KANN Max Reference</a>
+<div style="display: flex; flex-direction: column; align-items: center; margin-top: 2rem;">
+  <h1 style="text-align: center; margin-bottom: 0.2rem;">Audiophile Playbook by Christian Molnar</h1>
+  <div style="text-align: center; color: #181614; font-family: var(--font-heading); font-size: 2.2rem; font-weight: 400; margin-bottom: 0.7rem;">Your Gateway to Headphone Happiness</div>
+  <div style="text-align: center; margin: 1.2rem 0 1.8rem 0; font-size: 1.18em; color: #3e2c18; font-family: var(--font-main); font-weight: 400; max-width: 700px;">
+    Ever wondered how to squeeze every last drop of joy from your DAPs and headphones? So did I! That’s why I asked Copilot to dive deep into the world of audiophile gear and help me craft the ultimate listening experience. Copilot totally rocked it—understanding my gear, my love for warm sound, and even suggesting a system for Warm, Max Bass, and Relaxed (long-session) listening.<br><br>
+    What you see here is just the beginning! I’m planning to turn this site into a playground for all sorts of fun audiophile adventures and resources. I hope you find it as useful (and fun) as I do. Happy listening!
+  </div>
 </div>
-<div class="card">
-  <img src="assets/CA1000T.jpg" alt="Astell&Kern CA1000T" class="product-image">
-  <h2>CA1000T Playbook</h2>
-  <a class="btn" href="acroca1000t.html">View CA1000T Reference</a>
+<div style="display: flex; flex-direction: column; align-items: center;">
+  <div class="card" style="align-items: center;">
+    <img src="assets/Astell_Kern_KANN_Max.jpg" alt="Astell&Kern KANN Max" class="product-image">
+    <h2>KANN Max Playbook</h2>
+    <a class="btn" href="kann_max.html">View KANN Max Reference</a>
+  </div>
+  <div class="card" style="align-items: center;">
+    <img src="assets/CA1000T.jpg" alt="Astell&Kern CA1000T" class="product-image">
+    <h2>CA1000T Playbook</h2>
+    <a class="btn" href="acroca1000t.html">View CA1000T Reference</a>
+  </div>
+  <div class="card" style="align-items: center;">
+    <h2>Story of the Collaboration</h2>
+    <a class="btn" href="story.html">Read the Story</a>
+  </div>
 </div>
-<div class="card">
-  <h2>Story of the Collaboration</h2>
-  <a class="btn" href="story.html">Read the Story</a>
+<footer class="bottom-nav">
+  <div class="bottom-nav-inner">
+    <a href="index.html">Home</a>
+    <span class="divider">|</span>
+    <a href="kann_max.html">Kann Max</a>
+    <span class="divider">|</span>
+    <a href="acroca1000t.html">ACRO CA1000T</a>
+    <span class="divider">|</span>
+    <a href="story.html">Story</a>
+    <span class="divider">|</span>
+    <a href="#contact">Contact</a>
+  </div>
+</footer>
+<!-- Contact Modal -->
+<div id="contact-modal" class="contact-modal-overlay" style="display:none;">
+  <div class="contact-modal">
+    <button class="contact-modal-close" id="contact-modal-close" aria-label="Close">&times;</button>
+    <h2>Contact</h2>
+    <form action="https://formspree.io/f/xovdeqpa" method="POST" class="contact-form">
+      <label for="contact-name">Name:</label>
+      <input type="text" id="contact-name" name="name" required>
+      <label for="contact-subject">Subject:</label>
+      <input type="text" id="contact-subject" name="subject" required>
+      <label for="contact-message">Message:</label>
+      <textarea id="contact-message" name="message" rows="5" required></textarea>
+      <button type="submit">Send</button>
+    </form>
+    <div class="contact-form-thankyou" style="display:none;">Thank you for your message!</div>
+  </div>
 </div>
+<script>
+function openContactModal() {
+  document.getElementById('contact-modal').style.display = 'flex';
+  document.body.style.overflow = 'hidden';
+}
+function closeContactModal() {
+  document.getElementById('contact-modal').style.display = 'none';
+  document.body.style.overflow = '';
+}
+[...document.querySelectorAll('a[href="#contact"]')].forEach(el => {
+  el.addEventListener('click', function(e) {
+    e.preventDefault();
+    openContactModal();
+  });
+});
+document.getElementById('contact-modal-close').onclick = closeContactModal;
+document.getElementById('contact-modal').onclick = function(e) {
+  if (e.target === this) closeContactModal();
+};
+const contactForm = document.querySelector('.contact-form');
+if (contactForm) {
+  contactForm.addEventListener('submit', function(e) {
+    setTimeout(function() {
+      contactForm.style.display = 'none';
+      document.querySelector('.contact-form-thankyou').style.display = 'block';
+    }, 100);
+  });
+}
+</script>
 </body>
 </html>
