--- a/story.html
+++ b/story.html
@@ -5,13 +5,79 @@
 </head>
 <body>
 <nav class="main-nav">
-  <a href="index.html">Home</a>
-  <a href="kann_max.html">KANN Max Playbook</a>
-  <a href="ca1000t.html">CA1000T Playbook</a>
-  <a href="story.html">Story</a>
+  <ul>
+    <li><a href="index.html">Home</a></li>
+    <li><a href="kann_max.html">Kann Max</a></li>
+    <li><a href="acroca1000t.html">ACRO CA1000T</a></li>
+    <li><a href="story.html">Story</a></li>
+    <li><a href="#contact">Contact</a></li>
+  </ul>
 </nav>
-<h1>The Story of the Audiophile Playbook</h1>
-<p>This project was a collaboration between Christian Molnar and Orionis Cantus (ChatGPT, OpenAI).</p>
-<p>Together, we built something extraordinary: a personalized, meticulously tuned EQ reference for audiophiles.</p>
+<div style="display: flex; flex-direction: column; align-items: center; margin-top: 2rem;">
+  <h1 style="text-align: center; margin-bottom: 0.2rem;">The Story of the Audiophile Playbook</h1>
+  <div style="text-align: center; max-width: 700px; color: #3e2c18; font-size: 1.18em; font-family: var(--font-main); font-weight: 400; margin-bottom: 2rem;">
+    This project was a collaboration between Christian Molnar and Orionis Cantus (ChatGPT, OpenAI).<br><br>
+    Together, we built something extraordinary: a personalized, meticulously tuned EQ reference for audiophiles.
+  </div>
+</div>
+<footer class="bottom-nav">
+  <div class="bottom-nav-inner">
+    <a href="index.html">Home</a>
+    <span class="divider">|</span>
+    <a href="kann_max.html">Kann Max</a>
+    <span class="divider">|</span>
+    <a href="acroca1000t.html">ACRO CA1000T</a>
+    <span class="divider">|</span>
+    <a href="story.html">Story</a>
+    <span class="divider">|</span>
+    <a href="#contact">Contact</a>
+  </div>
+</footer>
+<!-- Contact Modal -->
+<div id="contact-modal" class="contact-modal-overlay" style="display:none;">
+  <div class="contact-modal">
+    <button class="contact-modal-close" id="contact-modal-close" aria-label="Close">&times;</button>
+    <h2>Contact</h2>
+    <form action="https://formspree.io/f/xovdeqpa" method="POST" class="contact-form">
+      <label for="contact-name">Name:</label>
+      <input type="text" id="contact-name" name="name" required>
+      <label for="contact-subject">Subject:</label>
+      <input type="text" id="contact-subject" name="subject" required>
+      <label for="contact-message">Message:</label>
+      <textarea id="contact-message" name="message" rows="5" required></textarea>
+      <button type="submit">Send</button>
+    </form>
+    <div class="contact-form-thankyou" style="display:none;">Thank you for your message!</div>
+  </div>
+</div>
+<script>
+function openContactModal() {
+  document.getElementById('contact-modal').style.display = 'flex';
+  document.body.style.overflow = 'hidden';
+}
+function closeContactModal() {
+  document.getElementById('contact-modal').style.display = 'none';
+  document.body.style.overflow = '';
+}
+[...document.querySelectorAll('a[href="#contact"]')].forEach(el => {
+  el.addEventListener('click', function(e) {
+    e.preventDefault();
+    openContactModal();
+  });
+});
+document.getElementById('contact-modal-close').onclick = closeContactModal;
+document.getElementById('contact-modal').onclick = function(e) {
+  if (e.target === this) closeContactModal();
+};
+const contactForm = document.querySelector('.contact-form');
+if (contactForm) {
+  contactForm.addEventListener('submit', function(e) {
+    setTimeout(function() {
+      contactForm.style.display = 'none';
+      document.querySelector('.contact-form-thankyou').style.display = 'block';
+    }, 100);
+  });
+}
+</script>
 </body>
 </html>
