Final Rev of all pages.

--- a/story.html
+++ b/story.html
@@ -13,11 +13,48 @@
     <li><a href="#contact">Contact</a></li>
   </ul>
 </nav>
+
 <div style="display: flex; flex-direction: column; align-items: center; margin-top: 2rem;">
   <h1 style="text-align: center; margin-bottom: 0.2rem;">The Story of the Audiophile Playbook</h1>
   <div style="text-align: center; max-width: 700px; color: #3e2c18; font-size: 1.18em; font-family: var(--font-main); font-weight: 400; margin-bottom: 2rem;">
     This project was a collaboration between Christian Molnar and Orionis Cantus (ChatGPT, OpenAI).<br><br>
-    Together, we built something extraordinary: a personalized, meticulously tuned EQ reference for audiophiles.
+    Together, we built something extraordinary: a personalized, meticulously tuned EQ reference for audiophiles.<br><br>
+    But we needed more—we needed a creator of inspiring images and visual environments. We asked for inspiration and Sora came to our rescue, joining our small band of misfits.
+  </div>
+  <div class="card" style="max-width: 700px; background: linear-gradient(120deg, #fff8ef 0%, #e7e3d0 100%); box-shadow: 0 2px 12px #bfa14a22; margin-bottom: 2.5rem;">
+    <h2 style="text-align: center; font-size: 1.7rem; color: #bfa14a; letter-spacing: 1.5px; margin-bottom: 1.2rem;">Main Protagonists</h2>
+    <div class="protagonists-row" style="display: flex; flex-direction: row; justify-content: center; gap: 2.5rem; align-items: flex-start; flex-wrap: nowrap; padding: 0 1.2rem;">
+      <div style="display: flex; flex-direction: column; align-items: center; max-width: 320px; min-width: 180px;">
+        <img src="assets/Christian.jpg" alt="Christian Molnar" style="width: 120px; height: 120px; border-radius: 50%; object-fit: cover; box-shadow: 0 2px 8px #bfa14a55; margin-bottom: 0.7rem; object-position: center;">
+        <div style="font-family: var(--font-heading); font-size: 1.05em; font-weight: 600; color: #181614; margin-bottom: 0.2em; white-space: normal;">Christian Molnar</div>
+        <div style="font-size: 0.88em; color: #3e2c18; text-align: center; line-height: 1.28;">The passionate audiophile, explorer of sound, and the human spark behind the Playbook. Christian brings curiosity, taste, and a love for musical warmth to every project.</div>
+      </div>
+      <div style="display: flex; flex-direction: column; align-items: center; max-width: 320px; min-width: 180px;">
+        <img src="assets/Orionis-I.gif" alt="Orionis Cantus (AI)" style="width: 120px; height: 120px; border-radius: 50%; object-fit: cover; object-position: center 35%; box-shadow: 0 2px 8px #bfa14a55; margin-bottom: 0.7rem; background: #e7e3d0;">
+        <div style="font-family: var(--font-heading); font-size: 1.05em; font-weight: 600; color: #181614; margin-bottom: 0.2em; white-space: normal;">Orionis Cantus (AI)</div>
+        <div style="font-size: 0.88em; color: #3e2c18; text-align: center; line-height: 1.28;">The digital maestro, research wizard, and tireless code companion. Orionis brings data, logic, and a dash of creative flair to every sonic adventure.</div>
+      </div>
+      <div style="display: flex; flex-direction: column; align-items: center; max-width: 320px; min-width: 180px;">
+        <img src="assets/Sora.gif" alt="Sora" style="width: 120px; height: 120px; border-radius: 50%; object-fit: cover; box-shadow: 0 2px 8px #bfa14a55; margin-bottom: 0.7rem; background: #e7e3d0;">
+        <div style="font-family: var(--font-heading); font-size: 1.05em; font-weight: 600; color: #181614; margin-bottom: 0.2em; white-space: normal;">Sora</div>
+        <div style="font-size: 0.88em; color: #3e2c18; text-align: center; line-height: 1.28;">The OpenAI image sorceress and imagination engine! Sora turns wild ideas into vivid pictures, conjures up scenes from pure sound, and always brings a spark of visual magic to the Playbook crew. If you can dream it, Sora can illustrate it—usually with a wink and a plot twist!</div>
+      </div>
+    </div>
+    <style>
+      @media (max-width: 1100px) {
+        .protagonists-row { flex-wrap: wrap !important; }
+      }
+    </style>
+  </div>
+  <div class="card" style="max-width: 700px; background: linear-gradient(120deg, #f8f7f3 0%, #e7e3d0 100%); box-shadow: 0 2px 12px #bfa14a22; margin-bottom: 2.5rem;">
+    <h2 style="text-align: center; font-size: 1.3rem; color: #bfa14a; letter-spacing: 1.2px; margin-bottom: 1.1rem;">Project Journal</h2>
+    <div style="font-size: 1em; color: #3e2c18; font-family: var(--font-main); line-height: 1.6; max-width: 640px; margin: 0 auto;">
+      <!-- Add your journal entries below. Example format: -->
+      <div style="margin-bottom: 1.2em;">
+        <span style="color: #bfa14a; font-weight: 600;">May 1, 2025:</span> Kicked off the Playbook story with a new cast of protagonists and a fresh look. Excited to start journaling the journey!
+      </div>
+      <!-- Add more entries as the project evolves. -->
+    </div>
   </div>
 </div>
 <footer class="bottom-nav">
